--- a/style.css
+++ b/style.css
@@ -8,11 +8,20 @@ grey a7a9ac rgb(167, 169, 172)
 /*@import url("https://fonts.cdnfonts.com/css/futura-std-4?styles=52567,52579,52569");*/
 @import url("https://fonts.cdnfonts.com/css/futura-std-4?styles=52579");
 
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+html {
+  font-family: "Futura Std", system-ui, sans-serif;
+}
+
 body {
   margin: 0px;
   border: 0px;
   padding: 0px;
-  font-family: "Futura Std", sans-serif;
   font-size: 32px;
 }
 
